Changing PHP directory

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!--[if lt IE 10]>
             <script type="text/javascript" src="js/PIE.js"></script>
         <![endif]-->  
-        <script type="text/javascript" src="php/scriptsData.php"></script>
+        <script type="text/javascript" src="php4/scriptsData.php"></script>
         <script type="text/javascript" src="js/jquery.dateFormat-1.0.js"></script>
         <script type="text/javascript" src="js/jquery.nivo.slider.pack.js"></script>
         <script type="text/javascript" src="js/jquery.tweets.js"></script>
