Correction to GA tags and graphic rendering

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!--[if lt IE 10]>
             <script type="text/javascript" src="js/PIE.js"></script>
         <![endif]-->  
-        <script type="text/javascript" src="php4/scriptsData.php"></script>
+        <script type="text/javascript" src="php/scriptsData.php"></script>
         <script type="text/javascript" src="js/jquery.dateFormat-1.0.js"></script>
         <script type="text/javascript" src="js/jquery.nivo.slider.pack.js"></script>
         <script type="text/javascript" src="js/jquery.tweets.js"></script>
@@ -89,7 +89,7 @@
                     </div>
                     <div class="right subscribe-button-holder">
                         <a href="javascript: subscribe();" class="link-button">
-                            <img src="images/send_msg_button.png" class="button-image" alt="Enter Now" />
+                            <img src="images/send_msg_button.png" class="button-image" alt="Enter Now"/>
                         </a>
                         <span id="subscribeMesage" class="info-label block align-center green-label">                            
                         </span>
@@ -116,7 +116,7 @@
         </div>
         <div id="contact">
             <div class="contact">
-                <img class="fill-the-forms" src="images/fill_the_forms.png" alt="Fill the forms below"/>
+                <img class="fill-the-forms" src="images/fill_the_forms.png" alt="Fill the forms bellow"/>
                 <a class="closePopup" href="javascript: ClosePopupWindow();"><img src="images/close.png" alt="Close"/></a>
                 <ul class="user-data">
                     <li>
@@ -141,5 +141,20 @@
                 </ul>
             </div>
         </div>
+        <script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-37611136-4']);
+  _gaq.push(['_setDomainName', 'shoutz.com']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
+
     </body>
 </html>
