--- a/web/index.html
+++ b/web/index.html
@@ -25,11 +25,12 @@
         <script type="text/javascript" src="js/jquery.myHint.js"></script>
         <script type="text/javascript" src="js/jquery.vticker-min.js"></script>
         <script type="text/javascript" src="js/jquery.facebox.js"></script>                
-
+		<script src="js/MobilePopup.js" type="text/javascript"></script>
         <!-- Main script -->
         <script type="text/javascript" src="js/main.js"></script>                       
     </head>
     <body>    
+		<div id="container"></div>
         <table class="doc-loader">
             <tr>
                 <td>
