--- a/index.html
+++ b/index.html
@@ -25,11 +25,13 @@
         <script type="text/javascript" src="js/jquery.myHint.js"></script>
         <script type="text/javascript" src="js/jquery.vticker-min.js"></script>
         <script type="text/javascript" src="js/jquery.facebox.js"></script>                
+        <script type="text/javascript" src="web/js/MobilePopup.js"></script>                
 
         <!-- Main script -->
         <script type="text/javascript" src="js/main.js"></script>                       
     </head>
     <body>    
+		<div id="container"></div>
         <table class="doc-loader">
             <tr>
                 <td>
