--- a/web/index.html
+++ b/web/index.html
@@ -58,9 +58,8 @@
                     <h1>&nbsp;</h1>
                     <h1> <img src="images/pb.png" /></h1>
                     <p>
-                        Download <strong>Shoutz™</strong> app Today <br />
-                         enjoy the Mobile Powerball Experience on your mobile 
-                         <br /> Dial <strong> **SHOUTZ Now! </strong>
+						Win $100 TODAY by downloading the <strong>Shoutz™</strong> app today! <br /><br />
+						We're giving away $100 a day for 60 days. Become $100 Richer and receive the Powerball Mobile Experience! Download today!
                     </p>
                     <p>&nbsp;</p>
                     <table width="200" border="0">
