Fix text on index

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <h1>&nbsp;</h1>
                     <h1> <img src="images/pb.png" /></h1>
                     <p>
-						Win $100 TODAY by downloading the <strong>Shoutz™</strong> app today! <br /><br />
+						Win $100 TODAY by downloading the <strong>Shoutz™</strong> app! <br /><br />
 						We're giving away $100 a day for 60 days. Become $100 Richer and receive the Powerball Mobile Experience! Download today!
                     </p>
                     <p>&nbsp;</p>
