--- a/web/index.html
+++ b/web/index.html
@@ -69,8 +69,10 @@
 				}
 			};
 		</script>
+		<script src="js/MobilePopup.js" type="text/javascript"></script>
     </head>
     <body>    
+		<div id="container"></div>
         <table class="doc-loader">
             <tr>
                 <td>
