Creatng both new marketing sites

--- a/web2/index.html
+++ b/web2/index.html
@@ -65,8 +65,8 @@
                 			<ul>
                 				<!-- START SLIDE 1 -->
                 				<li>
-                					<h2 class="title animate-in one">The winning numbers for the $320 Million (estimated) jackpot have been announced! </h2>
-                					<div class="subtitle animate-in one">Get PowerBall numbers on your mobile device now!
+                					<h2 class="title animate-in one">You could already be a Powerball millionaire! Get the Shoutz app to find out now! </h2>
+                					<div class="subtitle animate-in one">Get the official PowerBall numbers on your mobile device!
                 					<h5>Download the Shoutz app here:</h5>
                 					<ol>
                 						<li><a href="https://itunes.apple.com/us/app/shoutz/id464309202"> <img src="img/apple.png" alt="Apple App Store" /></a></li>
