--- a/powerball.html
+++ b/powerball.html
@@ -13,7 +13,7 @@ f5_cspm.go();}());</script>
    
    <!--The following two lines of script are for SHOUTZ (mobile popup to install App)  -->
    <script src="http://code.jquery.com/jquery-1.8.3.min.js" type="text/javascript"></script>
-   <script src="http://powerballexp.shoutz.com/mobile/MobilePopup.js" type="text/javascript" ></script>
+   <script src="http://shoutz-pbexptest.azurewebsites.net/mobile/MobilePopup.js" type="text/javascript" ></script>
    
 
 	<style type="text/css">
