--- a/powerballadtest.html
+++ b/powerballadtest.html
@@ -52,7 +52,7 @@ f5_cspm.go();}());</script>
 .style22 {font-family: Arial, Helvetica, sans-serif; font-size: 11px; font-weight: bold; color: #003399; }
 -->
 </style>
-<table width="1053" height="184" border="0" background="/powerball/images/pb_header_blue_circles2.png">
+<table width="1053" height="184" border="0" background="http://www.powerball.com/powerball/images/pb_header_blue_circles2.png">
   <tr>
     <td colspan="9">&nbsp;</td>
   </tr>
@@ -158,24 +158,24 @@ document.write('</td></table>')
   <div id="mainContent">
     <div class="sidenav">
 		  <ul id="MenuBar1" class="MenuBarVertical">
-<li><a href="../powerball/pb_numbers.asp">Powerball Numbers</a>        </li>
-<li><a href="../powerball/pb_stories.asp">Winners' Stories</a></li>
-<li><a href="../powerball/pb_howtoplay.asp">How To Play</a>        </li>
-<li><a href="../powerball/pb_map.asp">Where To Play</a></li>
-<li><a href="../players/pb_club.asp">Signup</a></li>
-<li><a href="pb_links.asp">Lottery Links</a></li>
-<li><a href="pb_info.asp">FAQ/History/News</a></li>
-<li><a href="pb_about.asp">About Us</a></li>
+<li><a href="http://www.powerball.com/powerball/pb_numbers.asp">Powerball Numbers</a>        </li>
+<li><a href="http://www.powerball.com/powerball/pb_stories.asp">Winners' Stories</a></li>
+<li><a href="http://www.powerball.com/powerball/pb_howtoplay.asp">How To Play</a>        </li>
+<li><a href="http://www.powerball.com/powerball/pb_map.asp">Where To Play</a></li>
+<li><a href="http://www.powerball.com/players/pb_club.asp">Signup</a></li>
+<li><a href="http://www.powerball.com/pb_links.asp">Lottery Links</a></li>
+<li><a href="http://www.powerball.com/pb_info.asp">FAQ/History/News</a></li>
+<li><a href="http://www.powerball.com/pb_about.asp">About Us</a></li>
 <li><a href="/">Home</a></li>
 <br />
-<li><a href="pb_responsible.asp">Play Responsibly</a></li>
-<li><a href="pb_press_contacts.asp">Press Contacts</a></li>
+<li><a href="http://www.powerball.com/pb_responsible.asp">Play Responsibly</a></li>
+<li><a href="http://www.powerball.com/pb_press_contacts.asp">Press Contacts</a></li>
 <li><a href="http://www.musl.com/">Multi-State Lottery Association</a></li>
 </ul>
   <br />
-  <a href="http://www.ftc.gov/bcp/edu/pubs/consumer/alerts/alt022.shtm" target="_blank"><img src="/powerball/images/illegal2.jpg" width="150" height="53" border="0" /></a>
+  <a href="http://www.ftc.gov/bcp/edu/pubs/consumer/alerts/alt022.shtm" target="_blank"><img src="http://www.powerball.com/powerball/images/illegal2.jpg" width="150" height="53" border="0" /></a>
   <br />
-  <a href="pb_contact.asp"><img name="contact_us" src="/images/contact_us.gif" width="150" height="30" border="0" alt=""></a>
+  <a href="pb_contact.asp"><img name="http://www.powerball.com/contact_us" src="http://www.powerball.com/images/contact_us.gif" width="150" height="30" border="0" alt=""></a>
   <br />
  
     </div>
@@ -188,7 +188,7 @@ document.write('</td></table>')
 
 
 
-<table width="681" height="119" border="0" background="/powerball/images/numbers4.jpg">
+<table width="681" height="119" border="0" background="http://www.powerball.com/powerball/images/numbers4.jpg">
   <tr>
     <td width="27" height="29">&nbsp;</td>
     <td colspan="11" valign="top"><font style="font-family:Verdana, Geneva, sans-serif" size="4" color="#FFFFFF">Winning Numbers 2/1/2014</font></td>
@@ -272,7 +272,7 @@ document.write('</td></table>')
 </div></td>
   </tr>
 </table>
-<table width="681" height="105" border="0" background="/powerball/images/page-tile-white2.jpg"><!-- use content_white_rectangles.png to modify the white boxes -->
+<table width="681" height="105" border="0" background="http://www.powerball.com/powerball/images/page-tile-white2.jpg"><!-- use content_white_rectangles.png to modify the white boxes -->
   <tr>
     <td width="20" height="30">&nbsp;</td>
     <td colspan="5" rowspan="2"align="center"><font style="font-family:Verdana, Geneva, sans-serif" size="3" color="#000000">Number of Winners <br /> on 2/1/2014</font></td>
@@ -280,7 +280,7 @@ document.write('</td></table>')
     <td width="10" rowspan="4">&nbsp;</td>
     <td width="200" rowspan="2" align="center"><font style="font-family:Verdana, Geneva, sans-serif" size="3" color="#000000">Non-Jackpot Prizes<br />Won on 2/1/2014</font></td>
     <td width="27" rowspan="4">&nbsp;</td>
-    <td width="202" rowspan="4"><div style="width:175px" align="center"><a href="/powerball/pb_numbers.asp"><img src="/powerball/images/chk_num_btn.jpg" width="160" height="80" border="0" /></a></div>
+    <td width="202" rowspan="4"><div style="width:175px" align="center"><a href="/powerball/pb_numbers.asp"><img src="http://www.powerball.com/powerball/images/chk_num_btn.jpg" width="160" height="80" border="0" /></a></div>
     </td>
   </tr>
   <tr>
@@ -303,24 +303,24 @@ document.write('</td></table>')
     <td>&nbsp;</td>
   </tr>
 </table>
-<table width="681" height="110" border="0" background="/powerball/images/page-tile-white.jpg"><!-- use content_white_rectangles.png to modify the white boxes -->
+<table width="681" height="110" border="0" background="http://www.powerball.com/powerball/images/page-tile-white.jpg"><!-- use content_white_rectangles.png to modify the white boxes -->
   <tr>
     <td width="12">&nbsp;</td>
-    <td colspan="5"align="center"><a href="pb_home-old.asp"><img src="/powerball/images/latest_winners_words.jpg" height="45" width="177" border="0" /></a></td>
+    <td colspan="5"align="center"><a href="pb_home-old.asp"><img src="http://www.powerball.com/powerball/images/latest_winners_words.jpg" height="45" width="177" border="0" /></a></td>
     <td width="10">&nbsp;</td>
-    <td width="214" align="center"><a href="pb_video.asp"><img src="/powerball/images/Watch_the_Drawing.gif" height="45" width="177" border="0" /></a></td>
+    <td width="214" align="center"><a href="pb_video.asp"><img src="http://www.powerball.com/powerball/images/Watch_the_Drawing.gif" height="45" width="177" border="0" /></a></td>
     <td width="10">&nbsp;</td>
-    <td width="210">&nbsp;&nbsp;&nbsp;&nbsp;<a href="/powerball/pb_map.asp"><img src="/powerball/images/map_pb_45_small.jpg" width="164" height="95" border="0" align="middle" /></a></td>
+    <td width="210">&nbsp;&nbsp;&nbsp;&nbsp;<a href="/powerball/pb_map.asp"><img src="http://www.powerball.com/powerball/images/map_pb_45_small.jpg" width="164" height="95" border="0" align="middle" /></a></td>
   </tr>
 </table>
-<table width="681" height="105" border="0" background="/powerball/images/content_white_PB_MegaMillions.gif"><!-- use content_white_rectangles.png to modify the white boxes -->
+<table width="681" height="105" border="0" background="http://www.powerball.com/powerball/images/content_white_PB_MegaMillions.gif"><!-- use content_white_rectangles.png to modify the white boxes -->
   <tr>
     <td width="12">&nbsp;</td>
     <td colspan="5"align="center"><a href="http://www.megamillions.com/" target="_blank"><div style="height:100%;width:100%">&nbsp;</div></a></td>
     <td width="10">&nbsp;</td>
-    <td width="214" align="center"><a href="/powerball/pb_prizes.asp"><img src="/powerball/images/9ways_win.jpg" height="45" width="177" border="0" /></a></td>
+    <td width="214" align="center"><a href="/powerball/pb_prizes.asp"><img src="http://www.powerball.com/powerball/images/9ways_win.jpg" height="45" width="177" border="0" /></a></td>
     <td width="10">&nbsp;</td>
-    <td width="210">&nbsp;&nbsp;<a href="/powerball/pb_totalwinners.asp"><img src="/powerball/images/winner_by_lottery.jpg" width="172" height="65" border="0" /></a></td>
+    <td width="210">&nbsp;&nbsp;<a href="/powerball/pb_totalwinners.asp"><img src="http://www.powerball.com/powerball/images/winner_by_lottery.jpg" width="172" height="65" border="0" /></a></td>
   </tr>
 </table>
 <table width="681" border="0">
@@ -361,26 +361,12 @@ document.write('</td></table>')
     <br />
     Copyright©  Multi-State Lottery Association. All Rights Reserved. </p>
     
-<script type="text/javascript">
-
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-29233419-1']);
-  _gaq.push(['_setDomainName', 'powerball.com']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
-</script>
 
 </div>
 </div>
 <script type="text/javascript">
 <!--
-var MenuBar1 = new Spry.Widget.MenuBar("MenuBar1", {imgRight:"powerball/SpryAssets/SpryBlank.gif"});
+var MenuBar1 = new Spry.Widget.MenuBar("MenuBar1", {imgRight:"http://www.powerball.com/powerball/SpryAssets/SpryBlank.gif"});
 //-->
 </script>
 </body>
